--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">GrievifyAdmin</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="tab_text_1">Assigned</string>
+    <string name="tab_text_2">In Progress</string>
+    <string name="tab_text_3">Resolved</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_start">Start</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
