--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,6 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Home</string>
-    <string name="menu_slideshow">Home</string>
+    <string name="menu_gallery">Analytics</string>
+    <string name="menu_slideshow">Profile</string>
 </resources>
