--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_home">GrievifyAdmin</string>
     <string name="menu_gallery">Analytics</string>
     <string name="menu_slideshow">Profile</string>
 </resources>
